--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <link rel="stylesheet" href="app.css">
 	
- 
-	<script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>	
+ 	
   </head>
   <body>
                  
@@ -41,7 +40,7 @@
 
 				<div class="panel_content">Мы в соц. сетях</div>
 				<ul class="ss_l">
-					<li><a href="https://www.facebook.com/boewoebratstwo"><img src="soc_img/fb.png"/></a></li>
+					<li><a href="http://www.facebook.com/boewoebratstwo/" ><img src="soc_img/fb.png"/></a></li>
 					<li><a href="https://instagram.com/battle_brotherhood"  target="_blank"><img src="soc_img/inst.png"/></a></li>
 					<li><a href="http://www.youtube.com/user/battlebrotherhood"><img src="soc_img/yt.png"/></a></li>
 					<li><a href="https://vk.com/battlebrotherhood"><img src="soc_img/vk.png"/></a></li>
@@ -211,7 +210,7 @@
       </div>
       <!-- Bottom Tabbar-->
       <div class="toolbar tabbar tabbar-labels nv_down">
-        <div class="toolbar-inner"><a href="#view-1" class="tab-link active"> <i class="icon tabbar-demo-icon-1"></i><span class="tabbar-label">Новости</span></a><a href="#view-2" class="tab-link"><i class="icon tabbar-demo-icon-4"></i><span class="tabbar-label">Фото</span></a><a href="#view-3" class="tab-link"> <i class="icon tabbar-demo-icon-3"></i><span class="tabbar-label">Видео</span></a><a href="#view-4" class="tab-link"> <i class="icon tabbar-demo-icon-2"></i><span class="tabbar-label">Соц.сети</span></a></div>
+        <div class="toolbar-inner"><a href="#view-1" class="tab-link active"> <i class="icon tabbar-demo-icon-1"></i><span class="tabbar-label">Новости</span></a><a href="#view-2" class="tab-link"><i class="icon tabbar-demo-icon-4"></i><span class="tabbar-label">Фото</span></a><a href="#view-3" class="tab-link"> <i class="icon tabbar-demo-icon-9"></i><span class="tabbar-label">Видео</span></a><a href="#view-4" class="tab-link"> <i class="icon tabbar-demo-icon-2"></i><span class="tabbar-label">Соц.сети</span></a></div>
       </div>
     </div>
             
