--- a/index3.html
+++ b/index3.html
@@ -104,22 +104,16 @@
 
 
 
-  <div class="content-block-title">Dark Theme</div>
+  <div class="content-block-title">Light Theme</div>
   <div class="content-block row">
-    <div class="col-50"><a href="#" class="button pb-standalone-dark">Standalone</a></div>
+	<div class="col-33"><a href="#" class="button pb-standalone">Standalone</a></div>
   </div>
 
   
 
 			
 			
-			<div class="list-block">
-					<div id="placephoto" class="pb-standalone-dark">
-							<div style="text-align:center" class="content-block-inner">
-									<span class="preloader"></span>
-							</div>
-					</div>
-			</div>			  
+	  
 		</div>
 	</div>
 
