--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- We can make with view with navigation, let's add Top Navbar-->
     <div class="navbar nv_up no-border">
 		<div class="navbar-inner">
-         	<div class="left"><a href="#"><img class="refresh" src="framework7/img/refresh_white.png"/></a></div>
+         	<div class="left"><a href="javascript:window.location.reload(true)"><img class="refresh" src="framework7/img/refresh_white.png"/></a></div>
             <div class="center sliding">Фото</div>
 			<div class="right"><a href="#" data-panel="right" class="open-panel"><img src="logo.png"/></a></div>
 		</div>
@@ -125,7 +125,7 @@
       <div id="view-3" class="view tab">
        <div class="navbar nv_up no-border">
           <div class="navbar-inner">
-            <div class="left"><a href="#"><img class="refresh" src="framework7/img/refresh_white.png"/></a></div>
+            <div class="left"><a href="javascript:window.location.reload(true)"><img class="refresh" src="framework7/img/refresh_white.png"/></a></div>
             <div class="center sliding">Видео</div>
 <div class="right"><a href="#" data-panel="right" class="open-panel"><img src="logo.png"/></a></div>
             </div>
@@ -153,7 +153,7 @@
           <div data-page="index-4" class="page">
             <div class="navbar nv_up no-border">
           <div class="navbar-inner">
-           		<div class="left"><a href="#"><img class="refresh" src="framework7/img/refresh_white.png"/></a></div>
+           		<div class="left"><a href="javascript:window.location.reload(true)"><img class="refresh" src="framework7/img/refresh_white.png"/></a></div>
                 <div class="center sliding">Мы в соцсетях</div>
 				<div class="right"><a href="#" data-panel="right" class="open-panel"><img src="logo.png"/></a></div>
               </div>
