--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
 					<div style="text-align:center" class="content-block-inner">
                          <!-- Preloader -->
   <div class="infinite-scroll-preloader">
-    <div class="preloader preloader"></div>
+    <div class="preloader"></div>
   </div>
 					</div>
                     </div>
+                    
 				</div>
 			</div>
 		</div>
