--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 				<div class="panel_content">Мы в соц. сетях</div>
 				<ul class="ss_l">
-					<li><a class="external link" target="_blank" href="http://www.facebook.com/boewoebratstwo/" ><img src="soc_img/fb.png"/></a></li>
-					<li><a class="external link" target="_blank" href="https://instagram.com/battle_brotherhood"><img src="soc_img/inst.png"/></a></li>
+					<li><a class="external link" target="_blank" ng-href="http://www.facebook.com/boewoebratstwo/" ><img src="soc_img/fb.png"/></a></li>
+					<li><a class="external link" target="_blank" ng-href="https://instagram.com/battle_brotherhood"><img src="soc_img/inst.png"/></a></li>
 					<li><a class="external link" target="_blank" href="http://www.youtube.com/user/battlebrotherhood"><img src="soc_img/yt.png"/></a></li>
 					<li><a class="external link" target="_blank" href="https://vk.com/battlebrotherhood"><img src="soc_img/vk.png"/></a></li>
                  </ul>
@@ -104,7 +104,7 @@
 	</div>
 	<div class="pages">
 		<div data-page="index-2" class="page">
-			<div class="page-content">	
+			<div class="page-content infinite-scroll">	
 			
 				<div id="placephoto" class="list-block">
 					<div style="text-align:center" class="content-block-inner">
