--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 				<div class="panel_content">Мы в соц. сетях</div>
 				<ul class="ss_l">
 					<li><a class="external link" target="_blank" ng-href="http://www.facebook.com/boewoebratstwo/" ><img src="soc_img/fb.png"/></a></li>
-					<li><a class="external link" target="_blank" ng-href="https://instagram.com/battle_brotherhood"><img src="soc_img/inst.png"/></a></li>
+					<li><a class="external link" target="_blank" href="https://instagram.com/battle_brotherhood"><img src="soc_img/inst.png"/></a></li>
 					<li><a class="external link" target="_blank" href="http://www.youtube.com/user/battlebrotherhood"><img src="soc_img/yt.png"/></a></li>
-					<li><a class="external link" target="_blank" href="https://vk.com/battlebrotherhood"><img src="soc_img/vk.png"/></a></li>
+					<li><a class="external link" target="_system" href="https://vk.com/battlebrotherhood"><img src="soc_img/vk.png"/></a></li>
                  </ul>
                  <ul class="ss_r">
 					<li><a class="external link" target="_blank" href="https://plus.google.com/+BattleBrotherhoodRu2014"><img src="soc_img/gplus.png"/></a></li>
