--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 родство тех, кто погиб,
 и тех, кто выжил..</p>
 
+<script>
+var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes');
+</script>
+
 				<div class="panel_content">Мы в соц. сетях</div>
 				<ul class="ss_l">
 					<li><a class="external link" target="_blank" href="http://www.facebook.com/boewoebratstwo/" ><img src="soc_img/fb.png"/></a></li>
