--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
 родство тех, кто погиб,
 и тех, кто выжил..</p>
 
-<script>
-var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes');
-</script>
 
 				<div class="panel_content">Мы в соц. сетях</div>
 				<ul class="ss_l">
@@ -117,8 +114,10 @@ var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes
     <div class="preloader"></div>
   </div>
 					</div>
+
                     </div>
-                    
+                    <p><a href='#' class='button button-fill color-blue NextClass'>далее</a></p><br>
+                    <p></p>
 				</div>
 			</div>
 		</div>
