--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 					<li><a class="external link" target="_blank" href="http://www.odnoklassniki.ru/battlebrotherhood"><img src="soc_img/ok.png"/></a></li>
 					<li><a class="external link" target="_blank" href="http://www.linkedin.com/profile/view?id=340907103"><img src="soc_img/in.png"/></a></li>
                     </ul>
+                    <button onclick="openUrl('https://en.m.wikipedia.org/wiki/Safari', false)">Open Wikipedia</button><br/><br/>
+    <button onclick="openUrl('https://en.m.wikipedia.org/wiki/Safari', true)">Open Wikipedia in reader mode</button><br/><br/>
+<button onclick="openUrl('https://en.m.wikipedia.org/wiki/Safari', false);setTimeout(dismissSafari, 10000)">Open Wikipedia, auto-dismiss after 10s</button>
                   <div class="MadeBy">
                   <a class="external link" target="_blank" href="http://kisa-studio.ru"><i>made by </i><img src="logo_kisa.png"/></a>
                   </div>
@@ -168,6 +171,11 @@
 					
 
                     <center>
+	<button onclick="openUrl('https://en.m.wikipedia.org/wiki/Safari', false)">Open Wikipedia</button><br/><br/>
+    <button onclick="openUrl('https://en.m.wikipedia.org/wiki/Safari', true)">Open Wikipedia in reader mode</button><br/><br/>
+    <button onclick="openUrl('https://en.m.wikipedia.org/wiki/Safari', false);setTimeout(dismissSafari, 10000)">Open Wikipedia, auto-dismiss after 10s</button>
+	
+	
                     <ul class="ss_l">
 					<li><a class="external link" target="_blank" href="https://www.facebook.com/boewoebratstwo"><img src="soc_img/fb.png"/></a></li>
 					<li><a class="external link" target="_blank" href="https://instagram.com/battle_brotherhood"><img src="soc_img/inst.png"/></a></li>
@@ -202,9 +210,45 @@
     <script src="framework7/js/framework7.min.js"></script>
     <script src="framework7/feed/framework7.feeds.js"></script>
     
+<script type="text/javascript" src="cordova.js"></script> 
+<script type="text/javascript" src="SafariViewController.js"></script>	
 	
-	
-
+<script>
+  function openUrl(url, readerMode) {
+    SafariViewController.isAvailable(function (available) {
+      if (available) {
+        SafariViewController.show({
+              url: url,
+              hidden: false, // default false
+              animated: true, // default true, note that 'hide' will reuse this preference (the 'Done' button will always animate though)
+              transition: 'curl', // unless animated is false you can choose from: curl, flip, fade, slide (default)
+              enterReaderModeIfAvailable: readerMode, // default false
+              barColor: "#0000ff", // default is white (iOS 10 only)
+              tintColor: "#ffffff" // default is ios blue
+            },
+            function(result) {
+              if (result.event === 'opened') {
+                console.log('opened');
+              } else if (result.event === 'loaded') {
+                console.log('loaded');
+//                SafariViewController.hide();
+              } else if (result.event === 'closed') {
+                console.log('closed');
+              }
+            },
+            function(msg) {
+              console.log("KO: " + JSON.stringify(msg));
+            })
+      } else {
+        // potentially powered by InAppBrowser because that (currently) clobbers window.open
+        window.open(url /*, '_blank', 'location=yes'*/);
+      }
+    })
+  }
+  function dismissSafari() {
+    SafariViewController.hide()
+  }
+</script>
 	
 	
 	
